--- a/client/src/main/resources/com/seasidechachacha/client/view/UserScreen.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/UserScreen.fxml
@@ -36,9 +36,9 @@
                                 <DropShadow />
                             </effect>
                         </AnchorPane>
-                        <JFXButton fx:id="btn_all" graphicTextGap="35.0" layoutY="71.0" onAction="#handleButtonAction" prefHeight="43.0" prefWidth="250.0" ripplerFill="#1f86da" styleClass="navigation-item" text="        Xem thông tin cá nhân" />
-                        <JFXButton fx:id="btn_core" graphicTextGap="35.0" layoutY="114.0" onAction="#handleButtonAction" prefHeight="43.0" prefWidth="250.0" styleClass="navigation-item" text="            Chọn mua gói nhu yếu phẩm" />
-                        <JFXButton fx:id="btn_xeom" graphicTextGap="35.0" layoutY="157.0" onAction="#handleButtonAction" prefHeight="43.0" prefWidth="250.0" styleClass="navigation-item" text="Thanh toán chi phí" />
+                        <JFXButton fx:id="btnInfo" graphicTextGap="35.0" layoutY="71.0" onAction="#handleButtonAction" prefHeight="43.0" prefWidth="250.0" ripplerFill="#1f86da" styleClass="navigation-item" text="        Xem thông tin cá nhân" />
+                        <JFXButton fx:id="btnPackage" graphicTextGap="35.0" layoutY="114.0" onAction="#handleButtonAction" prefHeight="43.0" prefWidth="250.0" styleClass="navigation-item" text="            Chọn mua gói nhu yếu phẩm" />
+                        <JFXButton fx:id="btnPayment" graphicTextGap="35.0" layoutY="157.0" onAction="#handleButtonAction" prefHeight="43.0" prefWidth="250.0" styleClass="navigation-item" text="Thanh toán chi phí" />
                         <FontAwesomeIconView fill="#3c3b3b" glyphName="ARCHIVE" layoutX="13.0" layoutY="139.0" size="15" />
                         <FontAwesomeIconView fill="#3c3b3b" glyphName="USER_CIRCLE" layoutX="13.0" layoutY="97.0" size="15" />
                         <FontAwesomeIconView fill="#3c3b3b" glyphName="CREDIT_CARD" layoutX="12.0" layoutY="183.0" size="15" />
