--- a/client/src/main/resources/com/seasidechachacha/client/view/BuyPackage.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/BuyPackage.fxml
@@ -30,7 +30,7 @@
             <AnchorPane layoutX="35.0" layoutY="119.0" prefHeight="24.0" prefWidth="500.0">
                <children>
                   <TextField fx:id="searchText" promptText="Nhập từ khoá để tìm kiếm" styleClass="search-bar" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                  <Button fx:id="searchButton" onAction="#handleButton" style="-fx-background-color: #0098f1;" text="Tìm kiếm" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <Button fx:id="searchButton" style="-fx-background-color: #0098f1;" text="Tìm kiếm" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
@@ -40,14 +40,17 @@
             <ChoiceBox fx:id="choosePackage" layoutX="134.0" layoutY="584.0" prefHeight="25.0" prefWidth="259.0" />
             <Label layoutX="50.0" layoutY="584.0" styleClass="sub-label" text="Chọn gói:" />
             <Label layoutX="469.0" layoutY="584.0" styleClass="sub-label" text="Số lượng:" />
-            <TextField fx:id="quantity" layoutX="556.0" layoutY="584.0" onAction="#handleQuantity" prefHeight="25.0" prefWidth="82.0" />
+            <TextField fx:id="quantity" layoutX="556.0" layoutY="584.0" prefHeight="25.0" prefWidth="82.0" />
             <Label layoutX="467.0" layoutY="638.0" styleClass="sub-label" text="Tổng tiền:" textFill="#13669e">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <Label fx:id="totalCost" layoutX="592.0" layoutY="642.0" text="...." />
-            <Button fx:id="acceptButton" layoutX="364.0" layoutY="693.0" mnemonicParsing="false" onAction="#handleButton" text="Đặt hàng" />
+            <Label fx:id="totalCost" layoutX="556.0" layoutY="643.0" text="...." textFill="RED">
+               <font>
+                  <Font name="Tahoma Bold" size="13.0" />
+               </font></Label>
+            <Button fx:id="acceptButton" layoutX="325.0" layoutY="694.0" mnemonicParsing="false" text="Thêm vào giỏ hàng" />
          </children>
       </AnchorPane>
    </children>
