--- a/client/src/main/resources/com/seasidechachacha/client/view/Payment.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/Payment.fxml
@@ -8,33 +8,32 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox xmlns="http://javafx.com/javafx/13" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.PaymentController">
+<VBox prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.PaymentController">
    <children>
-      <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0">
+      <AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="800.0">
          <children>
-            <ImageView fitHeight="168.0" fitWidth="216.0" layoutX="192.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="168.0" fitWidth="216.0" layoutX="310.0" layoutY="105.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/pay-removebg-preview.png" />
                </image>
             </ImageView>
-            <Label layoutX="113.0" layoutY="212.0" text="Số dư nợ phải trả:" textFill="#115a8f">
+            <Label layoutX="231.0" layoutY="289.0" text="Số dư nợ phải trả:" textFill="#115a8f">
                <font>
                   <Font name="Tahoma Bold" size="14.0" />
                </font>
             </Label>
-            <Label layoutX="53.0" layoutY="256.0" prefHeight="17.0" prefWidth="187.0" text="Số dư còn trong tài khoản:" textFill="#115d94">
+            <Label layoutX="171.0" layoutY="333.0" prefHeight="17.0" prefWidth="187.0" text="Số dư còn trong tài khoản:" textFill="#115d94">
                <font>
                   <Font name="Tahoma Bold" size="14.0" />
                </font>
             </Label>
-            <Button fx:id="back" layoutX="199.0" layoutY="321.0" mnemonicParsing="false" onAction="#handleButton" text="Quay lại" />
-            <Button fx:id="pay" layoutX="331.0" layoutY="321.0" mnemonicParsing="false" onAction="#handleButton" text="Thanh toán" />
-            <Label fx:id="balanceLabel" layoutX="300.0" layoutY="213.0" text="..." textFill="RED">
+            <Button fx:id="pay" layoutX="385.0" layoutY="394.0" mnemonicParsing="false" onAction="#handleButton" text="Thanh toán" />
+            <Label fx:id="balanceLabel" layoutX="418.0" layoutY="290.0" text="..." textFill="RED">
                <font>
                   <Font name="Calibri Light" size="14.0" />
                </font>
             </Label>
-            <Label fx:id="totalLabel" layoutX="300.0" layoutY="257.0" text="..." textFill="RED">
+            <Label fx:id="totalLabel" layoutX="418.0" layoutY="334.0" text="..." textFill="RED">
                <font>
                   <Font name="Calibri Light" size="14.0" />
                </font>
