--- a/client/src/main/resources/com/seasidechachacha/client/view/AddNewUser.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/AddNewUser.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/13" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.AddNewUserController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.AddNewUserController">
     <children>
         <Label alignment="CENTER" maxWidth="1.7976931348623157E308" styleClass="main-label" text="Thêm mới người liên quan Covid19">
             <VBox.margin>
@@ -76,6 +76,12 @@
                   <FontAwesomeIconView fill="WHITE" glyphName="ARROW_LEFT" />
                </graphic>
             </Button>
+            <Label layoutY="253.0" styleClass="sub-label" text="Địa điểm điều trị/cách ly">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <ComboBox fx:id="cbPlace" layoutX="-1.0" layoutY="281.0" prefWidth="150.0" style="-fx-background-color: transparent; -fx-border-color: #006abc;" />
             </children>
         </AnchorPane>
     </children>
