--- a/client/src/main/resources/com/seasidechachacha/client/view/BuyPackage.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/BuyPackage.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -10,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/13" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.BuyPackageController">
+<VBox stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.BuyPackageController">
    <children>
       <AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="800.0">
          <children>
@@ -37,8 +36,7 @@
                   </Button>
                </children>
             </AnchorPane>
-            <ChoiceBox fx:id="choosePackage" layoutX="134.0" layoutY="584.0" prefHeight="25.0" prefWidth="259.0" />
-            <Label layoutX="50.0" layoutY="584.0" styleClass="sub-label" text="Chọn gói:" />
+            <Label layoutX="156.0" layoutY="584.0" styleClass="sub-label" text="Gói đã chọn:" />
             <Label layoutX="469.0" layoutY="584.0" styleClass="sub-label" text="Số lượng:" />
             <TextField fx:id="quantity" layoutX="556.0" layoutY="584.0" prefHeight="25.0" prefWidth="82.0" />
             <Label layoutX="467.0" layoutY="638.0" styleClass="sub-label" text="Tổng tiền:" textFill="#13669e">
@@ -51,6 +49,11 @@
                   <Font name="Tahoma Bold" size="13.0" />
                </font></Label>
             <Button fx:id="acceptButton" layoutX="325.0" layoutY="694.0" mnemonicParsing="false" text="Thêm vào giỏ hàng" />
+            <TextField fx:id="choosePackage" editable="false" layoutX="56.0" layoutY="626.0" prefHeight="28.0" prefWidth="292.0">
+               <font>
+                  <Font name="Tahoma Bold" size="14.0" />
+               </font>
+            </TextField>
          </children>
       </AnchorPane>
    </children>
