--- a/client/src/main/resources/com/seasidechachacha/client/view/AddNewTreatmentPlace.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/AddNewTreatmentPlace.fxml
@@ -11,21 +11,20 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/13" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.AddNewTreatmentPlaceController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.AddNewTreatmentPlaceController">
     <children>
         <Label alignment="CENTER" maxWidth="1.7976931348623157E308" styleClass="main-label" text="Thêm mới địa điểm điều trị/cách ly">
             <VBox.margin>
                 <Insets top="30.0" />
             </VBox.margin>
         </Label>
-        <AnchorPane prefHeight="400.0" prefWidth="699.0">
+        <AnchorPane prefWidth="699.0">
             <VBox.margin>
                 <Insets left="50.0" right="50.0" top="40.0" />
             </VBox.margin>
             <children>
                 <TextField fx:id="tfName" layoutY="34.0" prefHeight="26.0" prefWidth="330.0" promptText="Nhập tên địa điềm điều trị/cách ly" />
                 <TextField fx:id="tfCapacity" layoutX="351.0" layoutY="34.0" prefHeight="26.0" prefWidth="330.0" promptText="Sức chứa" />
-                <TextField fx:id="tfReception" layoutY="100.0" prefHeight="26.0" prefWidth="330.0" promptText="Số lượng tiếp nhận hiện tại" />
                 <Label styleClass="sub-label" text="Tên địa điểm điều trị/cách ly">
                     <font>
                         <Font size="14.0" />
@@ -36,36 +35,31 @@
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label layoutY="69.0" styleClass="sub-label" text="Số lượng tiếp nhận hiện tại">
-                    <font>
-                        <Font size="14.0" />
-                    </font>
-                </Label>
-            <Button fx:id="btnAdd" layoutX="310.0" layoutY="303.0" mnemonicParsing="false" text="Thêm mới" />
-            <Button fx:id="btnBack" layoutX="2.0" layoutY="303.0" mnemonicParsing="false" onAction="#goBack" text="Quay lại">
+            <Button fx:id="btnAdd" layoutX="311.0" layoutY="200.0" mnemonicParsing="false" text="Thêm mới" />
+            <Button fx:id="btnBack" layoutY="200.0" mnemonicParsing="false" onAction="#goBack" text="Quay lại">
                <graphic>
                   <FontAwesomeIconView fill="WHITE" glyphName="ARROW_LEFT" />
                </graphic>
             </Button>
-            <Label layoutY="135.0" styleClass="sub-label" text="Địa chỉ">
+            <Label layoutY="83.0" styleClass="sub-label" text="Địa chỉ">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label layoutY="174.0" text="Tỉnh/Thành phố" textFill="#006abc">
+            <Label layoutY="119.0" text="Tỉnh/Thành phố" textFill="#006abc">
                <font>
                   <Font size="13.0" />
                </font>
             </Label>
-            <ComboBox fx:id="cbCity" layoutY="208.0" prefWidth="150.0" style="-fx-background-color: transparent; -fx-border-color: #006abc;" />
-            <Label layoutX="277.0" layoutY="174.0" text="Quận/Huyện" textFill="#006abc">
+            <ComboBox fx:id="cbCity" layoutY="146.0" prefWidth="150.0" style="-fx-background-color: transparent; -fx-border-color: #006abc;" />
+            <Label layoutX="273.0" layoutY="119.0" text="Quận/Huyện" textFill="#006abc">
                <font>
                   <Font size="13.0" />
                </font>
             </Label>
-            <ComboBox fx:id="cbDistrict" layoutX="278.0" layoutY="208.0" prefWidth="150.0" style="-fx-background-color: transparent; -fx-border-color: #006abc;" />
-            <ComboBox fx:id="cbWard" layoutX="530.0" layoutY="208.0" prefWidth="150.0" style="-fx-background-color: transparent; -fx-border-color: #006abc;" />
-            <Label layoutX="530.0" layoutY="174.0" text="Phường/Xã" textFill="#006abc">
+            <ComboBox fx:id="cbDistrict" layoutX="273.0" layoutY="146.0" prefWidth="150.0" style="-fx-background-color: transparent; -fx-border-color: #006abc;" />
+            <ComboBox fx:id="cbWard" layoutX="530.0" layoutY="145.0" prefWidth="150.0" style="-fx-background-color: transparent; -fx-border-color: #006abc;" />
+            <Label layoutX="530.0" layoutY="119.0" text="Phường/Xã" textFill="#006abc">
                <font>
                   <Font size="13.0" />
                </font>
