--- a/client/src/main/resources/com/seasidechachacha/client/view/UserInfo.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/UserInfo.fxml
@@ -121,18 +121,20 @@
             </VBox.margin>
         </Label>
         <Pagination fx:id="paginationManaged" maxWidth="700.0">
-         <VBox.margin>
-            <Insets left="50.0" />
-         </VBox.margin></Pagination>
+            <VBox.margin>
+                <Insets left="50.0" />
+            </VBox.margin>
+        </Pagination>
         <Label styleClass="sub-label" text="Lịch sử tiêu thụ gói nhu yếu phẩm">
             <VBox.margin>
                 <Insets left="50.0" top="20.0" />
             </VBox.margin>
         </Label>
         <Pagination fx:id="paginationConsumption" maxWidth="700.0">
-         <VBox.margin>
-            <Insets left="50.0" />
-         </VBox.margin></Pagination>
+            <VBox.margin>
+                <Insets left="50.0" />
+            </VBox.margin>
+        </Pagination>
         <HBox prefWidth="200.0">
             <children>
                 <Label styleClass="sub-label" text="Dư nợ">
@@ -153,9 +155,10 @@
             </VBox.margin>
         </Label>
         <Pagination fx:id="paginationPayment" maxWidth="700.0">
-         <VBox.margin>
-            <Insets left="50.0" />
-         </VBox.margin></Pagination>
+            <VBox.margin>
+                <Insets left="50.0" />
+            </VBox.margin>
+        </Pagination>
     </children>
     <stylesheets>
         <URL value="@../css/style.css" />
