--- a/client/src/main/resources/com/seasidechachacha/client/view/AddNewPackage.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/AddNewPackage.fxml
@@ -4,20 +4,21 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/13" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.AddNewPackageController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.AddNewPackageController">
     <children>
         <Label alignment="CENTER" maxWidth="1.7976931348623157E308" styleClass="main-label" text="Thêm mới nhu yếu phẩm">
             <VBox.margin>
                 <Insets top="30.0" />
             </VBox.margin>
         </Label>
-        <AnchorPane prefWidth="699.0">
+        <AnchorPane prefHeight="276.0" prefWidth="699.0">
             <VBox.margin>
                 <Insets left="50.0" right="50.0" top="40.0" />
             </VBox.margin>
@@ -40,18 +41,23 @@
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label layoutX="350.0" layoutY="69.0" styleClass="sub-label" text="Thời gian giới hạn">
+                <Label layoutY="145.0" styleClass="sub-label" text="Thời gian giới hạn">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-            <Button fx:id="btnAdd" layoutX="310.0" layoutY="166.0" mnemonicParsing="false" text="Thêm mới" />
-            <Button fx:id="btnBack" layoutY="166.0" mnemonicParsing="false" onAction="#goBack" text="Quay lại">
+            <Button fx:id="btnAdd" layoutX="310.0" layoutY="248.0" mnemonicParsing="false" text="Thêm mới" />
+            <Button fx:id="btnBack" layoutY="248.0" mnemonicParsing="false" onAction="#goBack" text="Quay lại">
                <graphic>
                   <FontAwesomeIconView fill="WHITE" glyphName="ARROW_LEFT" />
                </graphic>
             </Button>
-            <TextField fx:id="tfDayCooldown" layoutX="351.0" layoutY="100.0" prefHeight="26.0" prefWidth="330.0" promptText="Nhập thời gian giới hạn" />
+            <TextField fx:id="tfFirst" layoutY="178.0" prefHeight="28.0" prefWidth="38.0" />
+            <ComboBox fx:id="cbFirst" layoutX="52.0" layoutY="179.0" prefHeight="27.0" prefWidth="96.0" style="-fx-background-color: #fff; -fx-border-color: #0098f1;" />
+            <TextField fx:id="tfSecond" layoutX="171.0" layoutY="178.0" prefHeight="28.0" prefWidth="38.0" />
+            <ComboBox fx:id="cbSecond" layoutX="224.0" layoutY="178.0" prefHeight="27.0" prefWidth="96.0" style="-fx-background-color: #fff; -fx-border-color: #0098f1;" />
+            <TextField fx:id="tfThird" layoutX="342.0" layoutY="178.0" prefHeight="28.0" prefWidth="38.0" />
+            <ComboBox fx:id="cbThird" layoutX="398.0" layoutY="179.0" prefHeight="27.0" prefWidth="96.0" style="-fx-background-color: #fff; -fx-border-color: #0098f1;" />
             </children>
         </AnchorPane>
     </children>
