--- a/client/src/main/resources/com/seasidechachacha/client/view/BuyPackage.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/BuyPackage.fxml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.Pagination?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
@@ -14,7 +15,9 @@
       <AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="800.0">
          <children>
             <Label layoutX="264.0" layoutY="51.0" styleClass="main-label" text="Chọn mua gói nhu yếu phẩm" />
-            <TableView fx:id="packageTable" layoutX="35.0" layoutY="179.0" prefHeight="369.0" prefWidth="731.0">
+            <Pagination fx:id="pagination" layoutX="35.0" layoutY="179.0" prefHeight="369.0" prefWidth="731.0">          
+            </Pagination>
+<!--            <TableView fx:id="packageTable" layoutX="35.0" layoutY="179.0" prefHeight="369.0" prefWidth="731.0">
                <columns>
                   <TableColumn fx:id="numberCol" maxWidth="1000.0" prefWidth="106.4000244140625" text="STT" />
                   <TableColumn fx:id="nameCol" maxWidth="6000.0" prefWidth="89.60003662109375" text="Tên gói" />
@@ -25,14 +28,22 @@
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
-            </TableView>
+            </TableView>-->
             <AnchorPane layoutX="35.0" layoutY="119.0" prefHeight="24.0" prefWidth="500.0">
                <children>
-                  <TextField fx:id="searchText" promptText="Nhập từ khoá để tìm kiếm" styleClass="search-bar" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                  <Button fx:id="searchButton" style="-fx-background-color: #0098f1;" text="Tìm kiếm" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TextField fx:id="tfSearch" prefHeight="26.0" prefWidth="430.0" promptText="Nhập từ khoá để tìm kiếm" styleClass="search-bar" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="70.0" AnchorPane.topAnchor="0.0" />
+                  <Button fx:id="btnSearch" layoutX="399.0" style="-fx-background-color: #0098f1;" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="70.60000000000002" AnchorPane.topAnchor="0.0">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
+                     <graphic>
+                        <FontAwesomeIconView fill="WHITE" glyphName="SEARCH" />
+                     </graphic>
+                  </Button>
+                  <Button fx:id="btnFilter"  layoutX="475.0" mnemonicParsing="false">
+                     <graphic>
+                        <FontAwesomeIconView fill="WHITE" glyphName="FILTER" />
+                     </graphic>
                   </Button>
                </children>
             </AnchorPane>
@@ -54,6 +65,7 @@
                   <Font name="Tahoma Bold" size="14.0" />
                </font>
             </TextField>
+            <ComboBox fx:id="cbSort" layoutX="596.0" layoutY="119.0" prefHeight="26.0" prefWidth="123.0" style="-fx-background-color: transparent; -fx-border-color: #006abc;" />
          </children>
       </AnchorPane>
    </children>
