--- a/client/src/main/resources/com/seasidechachacha/client/view/UserInfo.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/UserInfo.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox xmlns="http://javafx.com/javafx/13" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.UserInfoController">
+<VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.seasidechachacha.client.controllers.UserInfoController">
     <children>
         <Label alignment="TOP_CENTER" prefHeight="30.0" prefWidth="803.0" styleClass="main-label" text="Thông tin cá nhân">
         </Label>
@@ -142,10 +142,13 @@
                         <Insets left="50.0" top="20.0" />
                     </padding>
                 </Label>
-                <Label fx:id="labelDebt" styleClass="sub-label">
+                <Label fx:id="labelDebt" textFill="RED">
                     <padding>
                         <Insets left="50.0" top="20.0" />
                     </padding>
+               <font>
+                  <Font name="Tahoma Bold" size="14.0" />
+               </font>
                 </Label>
             </children>
         </HBox>
