--- a/client/src/main/resources/com/seasidechachacha/client/view/ViewListUser.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/ViewListUser.fxml
@@ -49,7 +49,12 @@
                     <FontAwesomeIconView fill="WHITE" glyphName="PLUS" />
                 </graphic>
             </Button>    
-        </HBox> 
+        </HBox>
+        <Label fx:id="labelEmpty" alignment="CENTER" prefHeight="30.0" prefWidth="750.0" styleClass="sub-label" text="Chưa có người liên quan Covid19 nào trong hệ thống." textAlignment="CENTER">
+            <font>
+                <Font size="10.0" />
+            </font>
+        </Label> 
         <Pagination fx:id="pagination">            
         </Pagination>
        
