--- a/client/src/main/resources/com/seasidechachacha/client/view/ViewPackageInfo.fxml
+++ b/client/src/main/resources/com/seasidechachacha/client/view/ViewPackageInfo.fxml
@@ -38,7 +38,7 @@
                         <Insets top="20.0" />
                     </padding>
                 </HBox>
-                <HBox layoutY="55.0" prefHeight="20.0" prefWidth="464.0" spacing="30.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="299.0" AnchorPane.topAnchor="55.0">
+                <HBox layoutY="55.0" prefHeight="20.0" prefWidth="612.0" spacing="30.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="299.0" AnchorPane.topAnchor="55.0">
                     <children>
                         <Label alignment="TOP_RIGHT" prefHeight="20.0" prefWidth="200.0" text="Mức giới hạn cho mỗi người" textFill="#006abc">
                             <font>
@@ -57,14 +57,14 @@
                   </Button>
                     </children>
                 </HBox>
-                <HBox layoutY="87.0" prefWidth="398.0" spacing="30.0" AnchorPane.topAnchor="87.0">
+                <HBox layoutY="96.0" prefHeight="26.0" prefWidth="612.0" spacing="30.0" AnchorPane.topAnchor="88.0">
                     <children>
                         <Label alignment="TOP_RIGHT" prefHeight="20.0" prefWidth="215.0" text="Thời gian giới hạn" textFill="#006abc">
                             <font>
                                 <Font name="System Bold" size="14.0" />
                             </font>
                         </Label>
-                        <Label fx:id="labelDay" prefHeight="20.0" prefWidth="78.0" text="">
+                        <Label fx:id="labelDay" prefHeight="20.0" prefWidth="300.0" text="">
                             <font>
                                 <Font size="14.0" />
                             </font>
